# soroban-poc

./: .env  .env_example  .gitignore  Makefile
.github/workflows/: main.yml
aux/: Cargo.toml
aux/src/: main.rs
bond/: README.md
bond/bond/: Cargo.toml
bond/bond/src/: contract.rs  errors.rs  event.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
bound/bound/: Cargo.toml
bound/bound/src/: contract.rs  errors.rs  metadata.rs  storage_types.rs  test.rs
car_rental/: Cargo.toml
car_rental/src/: contract.rs  contract_trait.rs  errors.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  testutils.rs
car_rental_example/: Makefile  admin.md  readme.md
car_rental_example/car_rental/src/: contract.rs  contract_trait.rs  errors.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  testutils.rs
lottery/: .env.example  Makefile  README.md  output.json  soroban_token_contract.wasm
lottery/aux/: Cargo.toml
lottery/lottery/: Cargo.toml
lottery/lottery/src/: context.rs  contract.rs  errors.rs  lib.rs  services.rs  test.rs
prek/: Cargo.toml
prek/src/: contract.rs  storage_types.rs
staking/staking/: README.md
staking/staking/src/: contract.rs  errors.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  testutils.rs
staking_share_token/staking_share_token/: Cargo.toml  README.md
staking_share_token/staking_share_token/diagrams/: staking_share_diagram.excalidraw
staking_share_token/staking_share_token/src/: contract.rs  lib.rs  metadata.rs  storage_types.rs  (+2 more)
starter/: Cargo.toml
starter/src/: contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
